<resources>
    <string name="app_name">Prototype</string>
    <string name="desc">desc</string>

    <string name="dash_msg1">Welcome, User!</string>
    <string name="dash_msg2">Book your trip now!</string>
    <string name="dash_msg3">Book Trip</string>
    <string name="dash_msg4">Show Ticket</string>
    <string name="dash_msg5">View Trip</string>
    <string name="dash_msg6">Check Route</string>
    <string name="dash_msg7">Edit Trip (WIP)</string>
    <string name="dash_msg8">Log-out</string>

    <string name="button1">Sign In</string>
    <string name="button2">Register</string>
    <string name="button3">Guest Log-in</string>

    <string name="msg1">Welcome</string>
    <string name="msg2">bitch</string>

    <string name="bookTrip1">Destination</string>
    <string name="bookTrip2">Time of Departure</string>
    <string name="bookTrip3">Remaining No. of Seats</string>
    <string name="bookTrip4">0</string>

    <string-array name="destination">
        <item>Aguinaldo Hwy- Imus</item>
        <item>Gahak- Kawit</item>
        <item>St. Dominic- Molino</item>
        <item>SM- Bacoor</item>
        <item>Arcade- Zapote</item>
    </string-array>

    <string-array name="busLine">
        <item>Victory Liner</item>
        <item>Five Star</item>
        <item>Golden Dragon</item>
        <item>AAB Bus Line</item>
        <item>Reinalyn</item>
    </string-array>

    <string-array name="numOfSeats">
        <item>30</item>
        <item>45</item>
        <item>40</item>
        <item>25</item>
        <item>20</item>
    </string-array>

    <string-array name="timeOfDepartureA">
        <item>17:30:00</item>
        <item>07:25:00</item>
    </string-array>

    <string-array name="timeOfDepartureB">
        <item>12:00:00</item>
        <item>05:10:00</item>
    </string-array>

    <string-array name="timeOfDepartureC">
        <item>08:00:00</item>
        <item>15:45:00</item>
    </string-array>

    <string-array name="timeOfDepartureD">
        <item>13:25:00</item>
        <item>07:25:00</item>
    </string-array>

    <string-array name="timeOfDepartureE">
        <item>10:00:00</item>
        <item>14:00:00</item>
    </string-array>

</resources>